setting login configuration

--- a/EpubSearcherAndroidApp/res/layout/activity_main.xml
+++ b/EpubSearcherAndroidApp/res/layout/activity_main.xml
@@ -47,4 +47,13 @@
         android:layout_marginTop="66dp"
         android:text="@string/insert_pass" />
 
+    <Button
+        android:id="@+id/buttonLoggin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="36dp"
+        android:text="@string/login_button" />
+
 </RelativeLayout>
