setting up listing layout

--- a/EpubSearcherAndroidApp/res/layout/activity_listing.xml
+++ b/EpubSearcherAndroidApp/res/layout/activity_listing.xml
@@ -3,29 +3,33 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
+    <Spinner
+        android:id="@+id/orderSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <ScrollView
-        android:id="@+id/scrollView1"
+        android:id="@+id/listingScrollView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="131dp" >
-    </ScrollView>
-
-    <TableLayout
-        android:id="@+id/tableLayout1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="28dp" >
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/orderSpinner" >
 
-        <TableRow
-            android:id="@+id/tableRow1"
+        <TableLayout
+            android:id="@+id/listingTable"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-        </TableRow>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="28dp" >
 
-    </TableLayout>
+            <TableRow
+                android:id="@+id/tableRow1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
+            </TableRow>
+        </TableLayout>
+    </ScrollView>
 
 </RelativeLayout>
