finally listing throught dropbox folders

--- a/EpubSearcherAndroidApp/res/layout/activity_listing.xml
+++ b/EpubSearcherAndroidApp/res/layout/activity_listing.xml
@@ -6,7 +6,8 @@
     <Spinner
         android:id="@+id/orderSpinner"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content" 
+        android:entries="@array/order_array"/>
 
     <GridView
         android:id="@+id/listingGridView"
