--- a/EpubSearcherAndroidApp/res/layout/grid_file.xml
+++ b/EpubSearcherAndroidApp/res/layout/grid_file.xml
@@ -5,23 +5,23 @@
     android:layout_height="fill_parent"
     android:padding="5dp" >
 
-    <ImageView
-        android:id="@+id/gridView_icon"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/epub_icon" >
-    </ImageView>
-
     <TextView
         android:id="@+id/gridTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/gridView_icon"
-        android:layout_marginTop="2dp"
+        android:layout_alignBottom="@+id/gridView_icon"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="72dp"
         android:ellipsize="marquee"
         android:text="@string/gridTextViewString"
-        android:textSize="18sp" >
-    </TextView>
+        android:textSize="18sp" />
+
+    <ImageView
+        android:id="@+id/gridView_icon"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/epub_icon" />
+
 </RelativeLayout>
