--- a/EpubSearcherAndroidApp/res/layout/activity_main.xml
+++ b/EpubSearcherAndroidApp/res/layout/activity_main.xml
@@ -61,4 +61,22 @@
         android:inputType="textPassword"
         android:maxLines="1" />
 
+    <CheckBox
+        android:id="@+id/checkBoxRecursive"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editTextPass"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="27dp"
+        android:text="@string/recursiveMode" />
+
+    <TextView
+        android:id="@+id/recursiveAdvert"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/buttonLoggin"
+        android:layout_below="@+id/checkBoxRecursive"
+        android:text="@string/recursiveAdvert"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
 </RelativeLayout>
