--- a/EpubSearcherAndroidApp/res/layout/grid_file.xml
+++ b/EpubSearcherAndroidApp/res/layout/grid_file.xml
@@ -5,17 +5,26 @@
     android:layout_height="fill_parent"
     android:padding="5dp" >
 
+    <View style="@style/Divider"/>
+    
     <TextView
-        android:id="@+id/gridTextView"
+        android:id="@+id/gridTextViewDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/gridView_icon"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="72dp"
-        android:ellipsize="marquee"
-        android:text="@string/gridTextViewString"
-        android:textSize="18sp" />
+        android:layout_below="@+id/gridTextViewTitle"
+        android:layout_toRightOf="@+id/gridView_icon"
+        android:text="@string/gridTextViewDateString" />
 
+    <TextView
+        android:id="@+id/gridTextViewTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/gridTextViewDate"
+        android:layout_alignTop="@+id/gridView_icon"
+        android:ellipsize="marquee"
+        android:text="@string/gridTextViewTitleString"
+        android:textSize="18sp" />
+    
     <ImageView
         android:id="@+id/gridView_icon"
         android:layout_width="64dp"
@@ -23,5 +32,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:src="@drawable/epub_icon" />
+   
 
+   
+    
 </RelativeLayout>
