--- a/EpubSearcherAndroidApp/res/layout/activity_main.xml
+++ b/EpubSearcherAndroidApp/res/layout/activity_main.xml
@@ -76,7 +76,16 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/buttonLoggin"
         android:layout_below="@+id/checkBoxRecursive"
+        android:layout_marginTop="40dp"
         android:text="@string/recursiveAdvert"
         android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <CheckBox
+        android:id="@+id/checkBoxEpubTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/checkBoxRecursive"
+        android:layout_below="@+id/checkBoxRecursive"
+        android:text="@string/autoTitle" />
 
 </RelativeLayout>
